--- a/spec/fbld.adoc
+++ b/spec/fbld.adoc
@@ -9,7 +9,7 @@ the readibilty of markup languages like asciidoc and markdown with the
 extensibility and clarity of structure of markup languages like xml.
 
 Note: Fbld should not be confused with the predecessor to fble, which was also
-called fbld. We reuse the name `fbld' in this case to suggest the term `Fable
+called fbld. We reuse the name `fbld` in this case to suggest the term `Fable
 Doc Language`.
 
 === Goals ===
@@ -27,29 +27,38 @@ The primary design goals of fbld are:
 * It should be easy to provide custom processing of the document. For example,
   conversion to html, latex, roff, or anything you might like.
 
-* It should support custom structure. A user could define their own new kinds
-  of structures and use those to describe the structure of their documents.
+* It should support custom structure, allowing a user to define their own new
+  kinds of structures and use those structures in their documents.
 
 === Use Cases ===
 
+The original use cases motivating development of the fbld language are:
+
 * Document functions in code and automatically generate man pages from it.
+
 * Document command line usage and automatically generate both man page and
   help usage text from it.
+
 * Mark up README files, tutorials, and language specifications to add clarity
   to structure and make it possible to generate books, webpages, etc. with
   that information.
 
-=== Comparisons ===
+=== Alternatives ===
+
+There are many alternatives for document markup. Each of the ones I tried had
+their own issues. Some of the issues are subtle and quite subjective. Here are
+a list of alternatives I considered before deciding to develop my own markup
+language.
 
 Markdown::
-* Subtlties in how to parse correctly.
+* Subtleties in how to parse correctly.
 * No support for custom structure components.
 
 Asciidoc::
 * Complex to parse and provide custom processing of the document.
-* Too hard to provide functioning vim syntax highlighting.
-* Have to know what particular symbols mean to understand the structure of a
-  document. For example, `......` versus `////////`.
+* Vim syntax highlighting doesn't work well, if at all.
+* You have to know what particular symbols mean to understand the structure of
+  a document. For example, `......` versus `////////`.
 
 XML::
 * Tags clutter the doc too much.
@@ -63,129 +72,295 @@ doxygen::
 tcl::
 * Too tedious to have nested inlined structure.
 
-== Concepts ==
+== Inline Structure ==
 
-An fbld document describes a sequence of commands to execute. Commands are
-entirely user defined. Each command takes a list of string string arguments.
+Fbld interprets text as a sequence of commands to execute. The way fbld
+converts text into a sequence of commands depends on whether the text is
+treated as inline structure or as block structure. This section introduces the
+main concepts of fbld from the point of view of parsing inline structure.
 
-There are two different forms of command sequence: block and inline. Block
-sequences are intended to be used for structures spanning many lines, where it
-doesn't hurt to use vertical space in the document to convey structure. Inline
-sequences are intended to be used for markup within a span of text, where
-introduction of new lines would break the flow of text.
-
-For example, imagine we have a `paragraph` command that takes a single
-argument which is the text of a paragraph. We could describe a document with
-three paragraphs using:
+For example, consider the following paragraph of text annotated with fbld
+inline structure:
 
 ....
-@paragraph[This is the text of the first paragraph]
-
-@paragraph[This is the text of the second paragraph]
-
-@paragraph[This is the text of the third paragraph]
+It's @emph[really] important to check the result of the @code[malloc] function
+in C, in case it returns @NULL. See
+@link[the malloc man page][https://manpages.org/malloc] for more details.
 ....
 
-The notation `@paragraph` says to execute the user provided paragraph command,
-passing the text in between `[` and `]` as its argument.
+Explicit commands are introduced with the `'@'` character. In this example
+we use commands `@emph`, `@code`, `@NULL`, and `@link`. The meaning of these
+commands is entirely user defined. There are no commands built in to fbld.
 
-Within a paragraph, we might want inline structure. For example, some bold
-words:
+Arguments to commands are passed within square brackets. For example, `really`
+is an argument passed to the `@emph` command, `malloc` is the argument passed
+to the `@code` command. The `@NULL` command is given no arguments and the
+`@link` command is given two arguments.
+
+Any text not explicitly part of a command or its arguments is grouped together
+into a single argument and passed to an implicit default inline command. For
+example, let's say the default command was called `@default`. The first,
+implicit command from the above text is then `@default[It's ]`.
+
+In summary, the above text is parsed into the following sequence of nine
+commands, using tcl syntax for clarity:
+
+[source,tcl]
+----
+default "It's "
+emph "really"
+default " important to check the result of the "
+code "malloc"
+default " function\nin C, in case it returns "
+NULL
+default ". See\n"
+link "the malloc man page" "https://manpages.org/malloc" 
+default " for more details."
+----
+
+And that's it. The core of how fbld works. Once in the form of a sequence of
+commands, users can provide whatever implementation they like for the commands
+to process the structure of the document the way they desire.
+
+=== Lexical Details ===
+
+When parsing inline structure, all whitespace is preserved.
+
+Command names are a sequence of one or more alphanumeric or underscore
+characters. No other characters are allowed in command names.
+
+The following are special characters in fbld:
+
+* `@`, `[`, `]`, `\`
+
+To use these characters without special processing, prefix them with a
+backslash character. For example:
 
 ....
-This is the text of a paragraph with a @bold[bold] word, or @bold[multiple
-bold words].
+My email is ruhler\@degralder.com \[I think\].
 ....
 
-This text, if interpreted using inline structure, and assuming a default
-inline command named `text` is interpreted as the following sequence of
-commands:
+Would be converted into the single command:
+
+[source,tcl]
+----
+default {My email is ruhler\@degralder.com \[I think\].}
+----
+
+It is illegal to specify `@` without a valid command name immediately
+following. It is illegal to use `[` or `]` outside of specifying arguments,
+and braces must be properly closed.
+
+The fbld parser has no knowledge of how many arguments a command expects. It
+is up to the command to report any misuse in the number of arguments when it
+is executed. It is possible for multiple invocations of the same command to be
+supplied a different number of arguments.
+
+=== Nested Commands ===
+
+It is possible to use inline structure in arguments to commands. For example:
 
 ....
-@text[This is the text of a paragraph with a ]
-@bold[bold]
-@text[ word, or ]
-@bold[multiple bold words]
-@text[.]
+Go @link[@bold[here]][www.degralder.com] for cool stuff.
 ....
 
-=== Block Structure ===
+When parsing the first argument to the `@link` command, the text from opening
+`[` to matching `]` is used. This is just like how braces work in tcl. In this
+case, the sequence of commands would be:
 
-Commands can take any number of arguments. The magic idea behind block
-structure is that the last argument can be specified without `[` and `]`, in
-one of two ways. Either it is take as all the text to the end of the same
-line, as in:
+[source,tcl]
+----
+default "Go "
+link "@bold[here]" "www.degralder.com"
+default " for cool stuff."
+----
 
-....
-@paragraph This is the text of the first paragraph
-....
-
-Or as all the text to the next blank line, as in:
-
-....
-@paragraph
-This is the text of the first paragraph. It happens
-to be a long paragraph that spans multiple lines.
-
-....
-
-The difference is, in the first case, the text of the argument starts on the
-same line as the tag. In the second case, the text of the argument starts on
-the line after the tag.
+It's up to the `@link` command to parse its first argument as inline
+structured text if it so desires.
 
 == Block Structure ==
 
-The block pass interprets text as a sequence of block commands and executes
-those. The procedure for parsing block structure is as follows:
-1. Skip blank lines. While not at end of input:
-2. If next character is not `'@'`, read all characters until the next blank
-   line. Issue the 'default block' command with the string read as the single
-   argument. Then go to (1).
-2. If next character is `'@'`, read `'@'` and the tag.
-3. If next character is not newline or `'['`, read all characters until end of
-   line. Add that as the last argument to the current command. Issue the
-   current command, and go to (1).
-4. If next character is `'['`, read all characters until matching `']'`. Add that
-   as next argument to current command. Go to (3).
-5. If next character is newline, skip passed that and go to 6.
-6. If next character is `'['`, read all characters until matching `']'`. Add that
-   as next argument to current command. Go to (3).
-7. If next character is newline, issue the current command. Go to (1).
-8. Read all characters up until next blank line. Add those as an arg to
-   current command issue the current command, and go to (1).
+Fbld parses block structured text into a sequence of commands using the same
+concepts as inline structure, with a few syntactic differences.
 
-== Inline Structure ==
+The key idea behind block structure is that blocks of text tend to take a lot
+of vertical space, so we can use a little extra vertical space to make the
+syntax of passing the last command argument less cluttered.
 
-The inline pass interprets text as a sequence of inline commands and executes
-those. The procedure for parsing inline structure is as follows:
-1. While not at end of input:
-2. If next character is not `'@'`, read all characters until the next `'@'`.
-   Issue the 'default inline' command with the string read as the single
-   argument. Then go to (1).
-3. If next characters is `'@'`, read `'@'` and the tag.
-4. If next characters is `'['`, read all characters until matching `']'`. Add
-   that as next argument to current command. Go to (4).
-5. If next character is not `'['`, issue the current command and go to (1).
+For example, consider a command, `@block` that takes two arguments: a title
+for the block and text to use in the block. We'll always use `[` and `]`
+notation to supply the first argument, but there are three different ways we
+can supply the last argument.
 
-== Lexical Syntax ==
+The first approach is to use a single line for the last argument. To do this,
+start the text of the last argument on the same line as the command:
 
-The following characters are special:
-`'@'`:: Denotes the start of a tag.
-`'['`:: Denotes the start of an argument.
-`']'`:: Denotes the end of an argument.
-`'\'`:: Used for character escapes.
+....
+@block["Example 1"] This is the first example.
+@block["Example 2"] This is the second example.
+....
 
-The following character escapes are supported:
-`'\@'`:: Literal `'@'` character.
-`'\['`:: Literal `'['` character.
-`'\]'`:: Literal `']'` character.
-`'\\'`:: Literal `'\'` character.
+The second approach is to start the last argument on the next line. In this
+case, everything up to the next blank line is used for the last argument:
 
-Tags are made up of alphanumeric characters and underscores.
+....
+@block["Example 1"]
+This is the first example.
 
-== Miscellaneous Notes ==
+@block["Example 2"]
+This is the second example.
+....
 
-* It's up to a command how it wants to interpret it's arguments. Either as
-  block structured text, inline structured text, or unstructured text.
-* To have inline structured text at the start of a default block, use the
-  default block structure command explicitly in the block structured text.
+The third approach is to use square braces for the last argument, in which
+case the command must be followed by a blank line:
+
+....
+@block["Example 1"][This is the first example.]
+
+@block["Example 2"][This is the second example.]
+....
+
+Typically you would use the same-line last argument for short text, such as
+section titles or small list items. You would use the next-line last argument
+when the argument is a single paragraph. You would use square braces for the
+last argument if it needs to span multiple paragraphs.
+
+=== A Bigger Example ===
+
+Here's an example demonstrating use of the various approaches to the last
+argument:
+
+....
+@title A Bigger Example
+
+Some introductory text here.
+
+@section[First Section]
+[
+@paragraph
+Here is a paragraph in the first
+section of the doc.
+
+@list
+@item First item of a list.
+@item Second item of a list.
+]
+....
+
+This would be parsed into the following sequence of three commands:
+
+[source,tcl]
+----
+title "A Bigger Example"
+default "Some introductory text here."
+section "First Section" {
+@paragraph
+Here is a paragraph in the first
+section of the doc.
+
+@list
+@item First item of a list.
+@item Second item of a list.
+}
+----
+
+The second argument to the `@section` command can then be parsed into its own
+sequence of commands:
+
+[source,tcl]
+----
+paragraph "Here is a paragraph in the first\nsection of the doc."
+list "@item First item of a list.\n@item Second item of a list."
+----
+
+And the argument to the `@list` command can be parsed into its own sequence:
+
+[source,tcl]
+----
+item "First item of a list."
+item "Second item of a list."
+----
+
+=== Lexical Details ===
+
+Whitespace is treated differently for block structured text than it is for
+inline structured test. In particular:
+
+* Blank lines between blocks are treated as delimiters, the whitespace of
+  those blank lines is ignored.
+* Whitespace between ']' and the start of a same-line last argument is treated
+  as a delimiter and otherwise ignored.
+* A `[` can be used in for an argument starting on the next line. In this case
+  the newline between the command or previous arguments `]` is allowed and
+  ignored.
+
+=== Escaping Inline Commands ===
+
+Imagine you want to emphasize the first word of a paragraph:
+
+....
+@section A Sample Section
+
+@emph[Yes!] The first word is emphasized
+....
+
+In this case, the intention was to use `@emph` as an inline structure command,
+but it will end up being parsed as a block structure command:
+
+[source,tcl]
+----
+section "A Sample Section"
+emph "Yes!" "The first word is emphasized"
+----
+
+To work around this, you can explicitly pass the paragraph as an argument
+that's expected to be inlined structured text. For example:
+
+....
+@section A Sample Section
+
+@default
+@emph[Yes!] The first word is emphasized
+....
+
+Which will be parsed as desired:
+
+[source,tcl]
+----
+section "A Sample Section"
+default "@emph[Yes!] The first word is emphasized"
+----
+
+== Handling of Escape Characters ==
+
+The characters `@`, `[`, `]`, and `\` are special and need to be escaped using
+`\` to avoid being processed specially. At the end of the day, users will need
+to manually remove the escapes.
+
+For example, imagine we want to put an email address in a document that we
+convert to markdown:
+
+....
+@block[Example]
+My email address is @bold[ruhler\@degralder.com].
+....
+
+This gets parsed via block structured text as:
+
+[source,tcl]
+----
+block "Example" {My email address is @bold[ruhler\@degralder.com].}
+----
+
+The second argument gets parsed as inline structured text as:
+
+[source,tcl]
+----
+default "My email address is "
+bold {ruhler\@degralder.com}
+default "."
+----
+
+To actually display the text, the `@bold` command should remove the backslash
+before rendering the text.
+
